--- a/api/templates/email/activation.html
+++ b/api/templates/email/activation.html
@@ -12,7 +12,7 @@
 
 {% trans "Gracias por usar nuestro sitio!" %}
 
-{% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+{% blocktrans %}Fiscalía General del Estado{% endblocktrans %}
 {% endblock text_body %}
 
 {% block html_body %}
@@ -23,6 +23,6 @@
 
 <p>{% trans "Gracias por usar nuestro sitio!" %}</p>
 
-<p>{% blocktrans %}The {{ site_name }} team{% endblocktrans %}</p>
+<p>{% blocktrans %}Fiscalía General del Estado{% endblocktrans %}</p>
 
 {% endblock html_body %}
