--- a/api/templates/email/confirmation.html
+++ b/api/templates/email/confirmation.html
@@ -1,21 +1,21 @@
 {% load i18n %}
 
 {% block subject %}
-{% blocktrans %}{{ site_name }} - Your account has been successfully created and activated!{% endblocktrans %}
+{% blocktrans %}{{ site_name }} - Tu cuenta se ha creado y activado!{% endblocktrans %}
 {% endblock %}
 
 {% block text_body %}
-{% trans "Your account has been created and is ready to use!" %}
+{% trans "Tu cuenta esta lista para usarse!" %}
 
-{% trans "Thanks for using our site!" %}
+{% trans "Gracias por usar nuestro sitio!" %}
 
-{% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+{% blocktrans %}Fiscalía General del Estado{% endblocktrans %}
 {% endblock text_body %}
 
 {% block html_body %}
 <p>{% trans "Your account has been created and is ready to use!" %}</p>
 
-<p>{% trans "Thanks for using our site!" %}</p>
+<p>{% trans "Gracias por usar nuestro sitio!" %}</p>
 
-<p>{% blocktrans %}The {{ site_name }} team{% endblocktrans %}</p>
+<p>{% blocktrans %}Fiscalía General del Estado{% endblocktrans %}</p>
 {% endblock html_body %}
