--- a/api/templates/email/password_changed_confirmation.html
+++ b/api/templates/email/password_changed_confirmation.html
@@ -1,21 +1,21 @@
 {% load i18n %}
 
 {% block subject %}
-{% blocktrans %}{{ site_name }} - Your password has been successfully changed!{% endblocktrans %}
+{% blocktrans %}{{ site_name }} - Su password se ah actualizado!{% endblocktrans %}
 {% endblock %}
 
 {% block text_body %}
-{% trans "Your password has been changed!" %}
+{% trans "Tu password ah sido cambiado!" %}
 
-{% trans "Thanks for using our site!" %}
+{% trans "Gracias por usar nuestro sitio!" %}
 
-{% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+{% blocktrans %}Fiscalía General del Estado{% endblocktrans %}
 {% endblock text_body %}
 
 {% block html_body %}
-<p>{% trans "Your password has been changed!" %}</p>
+<p>{% trans "Tu password ah sido cambiado!" %}</p>
 
-<p>{% trans "Thanks for using our site!" %}</p>
+<p>{% trans "Gracias por usar nuestro sitio!" %}</p>
 
-<p>{% blocktrans %}The {{ site_name }} team{% endblocktrans %}</p>
+<p>{% blocktrans %}Fiscalía General del Estado{% endblocktrans %}</p>
 {% endblock html_body %}
