--- a/api/templates/email/password_reset.html
+++ b/api/templates/email/password_reset.html
@@ -1,29 +1,28 @@
 {% load i18n %}
 
 {% block subject %}
-{% blocktrans %}Password reset on {{ site_name }}{% endblocktrans %}
+{% blocktrans %}Resetea tu password{% endblocktrans %}
 {% endblock subject %}
 
 {% block text_body %}
 {% blocktrans %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}
+{% blocktrans %}Haz recibido este correo, por que solicitaste el resetear tu password.{% endblocktrans %}
 
-{% trans "Please go to the following page and choose a new password:" %}
+{% trans "Porfavor ve al siguiente link y elige un nuevo password" %}
 {{ protocol }}://{{ domain }}/{{ url }}
-{% trans "Your username, in case you've forgotten:" %} {{ user.get_username }}
 
-{% trans "Thanks for using our site!" %}
+{% trans "Gracias por usar nuestro sitio!" %}
 
-{% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+{% blocktrans %}Fiscalía General del Estado{% endblocktrans %}
 {% endblock text_body %}
 
 {% block html_body %}
-<p>{% blocktrans %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}</p>
+<p>{% blocktrans %}Haz recibido este correo, por que solicitaste el resetear tu password.{% endblocktrans %}</p>
 
-<p>{% trans "Please go to the following page and choose a new password:" %}</p>
+<p>{% trans "Porfavor ve al siguiente link y elige un nuevo password" %}</p>
 <a href="{{ protocol }}://{{ domain }}/{{ url }}">{{ protocol }}://{{ domain }}/{{ url }}</a>
-<p>{% trans "Your username, in case you've forgotten:" %} <b>{{ user.get_username }}</b></p>
 
-<p>{% trans "Thanks for using our site!" %}</p>
+<p>{% trans "Gracias por usar nuestro sitio!" %}</p>
 
-<p>{% blocktrans %}The {{ site_name }} team{% endblocktrans %}</p>
+<p>{% blocktrans %}Fiscalía General del Estado{% endblocktrans %}</p>
 {% endblock html_body %}
